<resources>
    <string name="app_name">樂齡趣生活</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">設定/更改緊急連絡人</string>
    <string name="action_settings1">關於我們</string>
    <string name="setClock">設定時間</string>
    <string name="delClock">刪除提醒</string>
    <string name="alarmImage">alarmImage</string>
    <string name="flashlightImage">flashImage</string>
    <string name="flashlightbackground">FlashLightBackgound</string>
    <string name="healthImage">healthImage</string>
    <string name="jump">jump</string>
    <string name="history">history</string>
    <string name="sugar">sugar</string>
    <string name="temp">temp</string>
    <string name="date">輸入日期</string>
    <string name="pressure">pressure</string>
    <string name="typein_jump">輸入心跳</string>
    <string name="typein_temp">輸入體溫</string>
    <string name="typein_sugar">輸入血糖</string>
    <string name="jumpDetail">下/分(bmp)</string>
    <string name="add">新增資料</string>
    <string name="show">顯示</string>
    <string name="pressure1">收縮壓\t\t\t</string>
    <string name="pressure2">舒張壓\t\t\t</string>
    <string name="mmhg">mmhg</string>
    <string name="c">℃</string>
    <string name="mgdl">mg/dl</string>
    <string name="reset">重設資料</string>
    <string name="searchpressure">查詢血壓</string>
    <string name="searchjump">查詢心跳</string>
    <string name="searchsugar">查詢血糖</string>
    <string name="searchtemp">查詢體溫</string>
    <string name="longitude_label">經度：</string>
    <string name="latitude_label">緯度：</string>
    <string name="magnifying">magnifying</string>
    <string name="gpsos">gpsos</string>
    <string name="title_activity_maps">Map</string>
    <string name="address">取得現在地址</string>
    <string name="setEmergency">設定/更改緊急連絡人</string>
    <string name="sendText">傳送求救訊息</string>
    <string name="contactPerson1">聯絡人①: </string>
    <string name="contactPerson2">聯絡人②: </string>
    <string name="call">撥打緊急電話</string>
    <string name="callperson">撥打給預設聯絡人</string>
    <string name="alarm">發出警報聲響</string>
    <string name="shake">shake game</string>
    <string name="shake_title">IShake搖搖樂</string>
    <string name="start">開始遊戲</string>
    <string name="checkHistory">歷史紀錄</string>
    <string name="leave">離開遊戲</string>
    <string name="countdown">剩餘: </string>
    <string name="sec">秒</string>
    <string name="time">響鈴時間:</string>
    <string name="drugname">藥品名稱:</string>
    <string name="add_alarm">新增提醒</string>
    <string name="notice">記得吃藥囉!</string>
    <string name="noticeTitle">用藥提醒</string>

</resources>
