<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:transitionGroup="false"
    android:nestedScrollingEnabled="false"
    tools:context="com.example.ellis_wu.customdialogdemo.CustomDialogActivity"
    android:id="@+id/dialogBackground"
    android:gravity="center_vertical|center_horizontal"
    android:background="#454545">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_margin="0dp"
            android:focusable="true"
            android:background="#E6B045">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/text_title"
                android:text="設定用藥鬧鐘"
                android:minHeight="50dp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="X"
                android:id="@+id/text_close"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:background="#00ffffff"
                android:textColor="@android:color/black"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:onClick="text_close_onClick"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time"
            android:id="@+id/textView20"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView22"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setClock"
            android:background="#E6B045"
            android:textColor="@android:color/black"
            android:id="@+id/setAlarm_btn"
            android:onClick="setAlarm_btn_onClick" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/drugname"
            android:id="@+id/textView23"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/drugName_et"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_alarm"
            android:id="@+id/addAlarm_btn"
            android:onClick="addAlarm_btn_onClick"
            android:layout_weight="0.21"
            android:background="#E6B045"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/reset_btn"
            android:layout_gravity="center_horizontal"
            android:onClick="reset_btn_onClick"
            android:layout_weight="0.22"
            android:background="#E6B045"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</LinearLayout>